--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "babylonjs": "^3.3.0",
-    "babylonjs-gui": "^3.3.0",
-    "babylonjs-loaders": "^3.3.0",
-    "babylonjs-materials": "^3.3.0",
+    "babylonjs": "^4.0.3",
+    "babylonjs-gui": "^4.0.3",
+    "babylonjs-loaders": "^4.0.3",
+    "babylonjs-materials": "4.0.3",
     "cannon": "^0.6.2",
     "earcut": "^2.1.5",
     "oimo": "^1.0.9",
-    "rxjs": "^6.4.0",
-    "tslint": "5.12.1",
+    "rxjs": "^6.5.2",
+    "tslint": "5.16.0",
     "tslint-loader": "3.5.4"
   }
 }
